crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v83.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 83
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 28000000
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 21000000
      stake_weighted_median:
        secs: 0
        nanos: 28000000
  - - MergeCoins
    - observations:
        - - 7
          - secs: 0
            nanos: 30000000
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 19000000
        - - 5
          - secs: 0
            nanos: 54000000
      stake_weighted_median:
        secs: 0
        nanos: 30000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 49000000
      stake_weighted_median:
        secs: 0
        nanos: 49000000
  - - TransferObjects
    - observations:
        - - 9
          - secs: 0
            nanos: 53000000
        - - 6
          - secs: 0
            nanos: 12000000
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 55000000
      stake_weighted_median:
        secs: 0
        nanos: 53000000
  - - Upgrade
    - observations:
        - - 2
          - secs: 0
            nanos: 498000000
        - - 0
          - ~
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 109000000
      stake_weighted_median:
        secs: 0
        nanos: 498000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 245000000
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 245000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 4
          - secs: 0
            nanos: 382000000
        - - 0
          - ~
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 382000000
